add: validate and model
